preview compile