@@ -108,6 +108,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
+                <configuration>
+                    <release>19</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <!-- <compilerArgs>- -add-modules=jdk.incubator.concurrent</compilerArgs> -->
+                </configuration>
             </plugin>
         </plugins>
     </build>
